Bug Horizontal ScrollingBar

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,7 +6,7 @@
 .footer-content::before {
   position: absolute;
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 10px;
   background-color: turquoise;
   top: 10px;
